--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,11 +33,13 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"  />
 
     <android.support.design.widget.FloatingActionButton
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
+        android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:id="@+id/fab"
+        app:backgroundTint="@color/colorPrimary"
         android:src="@drawable/ic_plus"
         app:layout_anchor="@id/viewpager"
         app:layout_anchorGravity="bottom|right|end" />
