--- a/app/src/main/res/layout/activitylogin.xml
+++ b/app/src/main/res/layout/activitylogin.xml
@@ -10,12 +10,75 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.philipp.asvzroulette.LoginActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:id="@+id/loginText"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="Login"
+        android:textSize="16pt"
+        android:textStyle="bold"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:hint="Email"
+        android:ems="10"
+        android:layout_below="@+id/loginText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="53dp"
+        android:id="@+id/email" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:hint="Passwort"
+        android:ems="10"
+        android:layout_below="@+id/email"
+        android:layout_alignStart="@+id/email"
+        android:layout_marginTop="20dp"
+        android:id="@+id/password" />
+
+    <TextView
+        android:text="Es existiert kein Account mit dieser Emailadresse."
+        style="@style/ErrorMessageSignUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/email"
+        android:layout_alignStart="@+id/email"
+        android:layout_marginTop="32dp"
+        android:id="@+id/errorEmailLogin" />
+
+    <TextView
+        android:text="Falsches Passwort"
+        style="@style/ErrorMessageSignUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/password"
+        android:layout_alignStart="@+id/password"
+        android:layout_marginTop="32dp"
+        android:id="@+id/errorPasswordLogin" />
+
+    <Button
+        android:text="Los!"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/password"
+        android:layout_alignRight="@+id/password"
+        android:layout_marginTop="20dp"
+        android:id="@+id/login" />
+
     <Button
         android:text="@string/skip_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/password"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="120dp"
         android:id="@+id/skip" />
 
     <Button
