Added button in settings for beer chance Added buttons on cards Added Helper class TODO casting for arraylist (current,blacklist,done)

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,7 +7,8 @@ android:layout_height="match_parent">
 <android.support.design.widget.AppBarLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    android:id="@+id/appBarLayout">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -27,5 +28,16 @@ android:layout_height="match_parent">
     android:layout_centerVertical="true"
     android:layout_centerHorizontal="true"
     android:id="@+id/textView" />
+
+    <CheckBox
+        android:text="CheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="53dp"
+        android:onClick="checkClicked"
+        android:id="@+id/checkBox"
+        android:layout_below="@+id/appBarLayout"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
