--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -21,16 +21,14 @@ android:layout_margin="8dp">
         android:id="@+id/title"
         android:layout_height="wrap_content"
         android:layout_alignStart="@id/thumbnail"
-        android:layout_alignTop="@id/thumbnail"
         android:layout_alignEnd="@id/thumbnail"
         android:layout_alignBottom="@id/thumbnail"
         android:layout_width="wrap_content"
-        android:layout_below="@+id/thumbnail"
         android:layout_gravity="bottom"
         android:maxLines="1"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
-        android:paddingTop="165dp"
+
         android:textColor="#222"
         android:textStyle="bold"
         android:textSize="22sp"
@@ -44,6 +42,28 @@ android:layout_margin="8dp">
         android:padding="8dp"
         android:textColor="#666"
         android:textSize="14sp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonDone"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/description"
+        android:padding="8dp"
+        android:gravity="left"
+        android:text="Done"
+        />
+
+    <Button
+        android:text="Blacklist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonBlacklist"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:gravity="right"
+        android:padding="8dp"
+        />
 
 </RelativeLayout>
 </android.support.v7.widget.CardView>
