--- a/app/src/main/res/layout/activitylogin.xml
+++ b/app/src/main/res/layout/activitylogin.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--TODO change hardcoded string to use @string in resources-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activitylogin"
@@ -8,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.philipp.asvzroulette.LoginActivity">
+    tools:context="com.example.philipp.asvzroulette.activities.LoginActivity">
 
     <TextView
         android:layout_width="wrap_content"
