--- a/app/src/main/res/layout/fragmen_two.xml
+++ b/app/src/main/res/layout/fragmen_two.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.philipp.asvzroulette.TwoFragment">
+    tools:context="com.example.philipp.asvzroulette.fragments.TwoFragment">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/two"
-        android:textSize="40dp"
+        android:textSize="40sp"
         android:textStyle="bold"
         android:layout_centerInParent="true"/>
 
